objects/Participant__c.object
<CustomObject><fields>
        <fullName>Email__c</fullName>
        <formula>IF( External_Email__c !=NULL,External_Email__c ,  USF_Email__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email</label>
        <type>Text</type>
    </fields><fields>
        <fullName>External_Email__c</fullName>
        <label>External Email</label>
        <type>Email</type>
    </fields><fields>
        <fullName>External_Participant__c</fullName>
        <label>External Participant</label>
        <length>175</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Interaction__c</fullName>
        <label>Interaction</label>
        <referenceTo>Interaction__c</referenceTo>
        <relationshipName>Particpants</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields><fields>
        <fullName>Participant_Name__c</fullName>
        <formula>IF( External_Participant__c = null,   USF_Participant_Full_Name__c  , External_Participant__c )</formula>
        <label>Participant Name</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Student__c</fullName>
        <formula>USF_Participant__r.Full_Name__c</formula>
        <label>Student</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Type__c</fullName>
        <inlineHelpText>Type Name and Email of Department and Friends
Lookup Staff or Faculty using Contacts</inlineHelpText>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Person or Department</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parent / Family Member</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outside CASA Staff</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Faculty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Friend</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>USF_Email__c</fullName>
        <formula>USF_Participant__r.Email</formula>
        <label>USF Email</label>
        <type>Text</type>
    </fields><fields>
        <fullName>USF_Participant_Full_Name__c</fullName>
        <formula>USF_Participant__r.FirstName &amp; " " &amp;  USF_Participant__r.LastName</formula>
        <label>USF Participant Full Name</label>
        <type>Text</type>
    </fields><fields>
        <fullName>USF_Participant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>USF Participant</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Particpants1</relationshipName>
        <type>Lookup</type>
    </fields><allowInChatterGroups>true</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><description>Holds participant information for interactions, cases, etc.</description><enableActivities>true</enableActivities><enableBulkApi>true</enableBulkApi><enableFeeds>false</enableFeeds><enableHistory>true</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><label>Participant</label><nameField>
        <displayFormat>{MM}{DD}-{000}</displayFormat>
        <label>Participant Name</label>
        <type>AutoNumber</type>
    </nameField><pluralLabel>Participants</pluralLabel><sharingModel>ControlledByParent</sharingModel><listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews><validationRules>
        <fullName>External_OR_USF_Participant</fullName>
        <active>true</active>
        <errorConditionFormula>AND(External_Participant__c  &lt;&gt; null ,  USF_Participant__c   &lt;&gt; null)</errorConditionFormula>
        <errorDisplayField>External_Participant__c</errorDisplayField>
        <errorMessage>Only enter an External Participant OR a USF Participant.  Create a new record for other participants.</errorMessage>
    </validationRules></CustomObject>